# Shopper-Spectrum

./: .gitignore  Project Title (2).docx  README.md  Shopper_Spectrum_Analysis.ipynb  Shopper_Spectrum_Analysis.py  app.py  cluster_label_map.pkl  extracted_text.txt  main.py  product_list.pkl  product_recommendations.pkl  pyproject.toml  requirements.txt  rfm_kmeans.pkl  rfm_scaler.pkl
